name:                qfpay-sdk
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like disable optimization.
    Default:       True

Flag prof
    Description:   Turn on profiling settings
    Default:       False

library
  hs-source-dirs:      .
  exposed-modules:     QfPay
                     , QfPay.Types
                     , QfPay.Error
                     , QfPay.Utils
                     , QfPay.RPC
                     , QfPay.RPC.Basic

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , aeson
                     , cryptohash
                     , time
                     , http-client
                     , http-conduit
                     , persistent
                     , random
                     , path-pieces

  default-language:    Haskell2010

  default-extensions: TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              FlexibleInstances
              EmptyDataDecls
              DeriveDataTypeable
              ViewPatterns
              TupleSections
              RecordWildCards
              CPP
              PartialTypeSignatures
              ConstraintKinds

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0
  else
      ghc-options:   -O

  if flag(prof)
      ghc-options:   -fprof-auto
